--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4.5"
+actix-rt = "2.9"
+chrono = { version = "0.4", features = ["serde"] }
+diesel = { version = "2.1", features = [
+    "postgres",
+    "postgres_backend",
+    "r2d2",
+    "uuid",
+    "chrono",
+] }
+dotenvy = "0.15"
+diesel_migrations = "2.1"
+env_logger = "0.11"
+lazy_static = "1.4"
+listenfd = "1.0"
+serde = "1.0"
+serde_json = "1.0"
+r2d2 = "0.8"
+uuid = { version = "1.7", features = ["serde", "v4"] }
