Refactor to base around review entity rather than rating

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,5 +9,6 @@
         "vscode": {
             "extensions": ["mtxr.sqltools", "mtxr.sqltools-driver-pg"]
         }
-    }
+    },
+    "forwardPorts": [3000, 5432]
 }
