--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ratingapi"
+name = "reviewapi"
 version = "0.1.0"
 edition = "2021"
 
@@ -25,3 +25,4 @@ serde = "1.0"
 serde_json = "1.0"
 r2d2 = "0.8"
 uuid = { version = "1.7", features = ["serde", "v4"] }
+actix-cors = "0.7.0"
