--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 RUST_LOG=rest_api=info,actix=info,diesel_migrations=info
-DATABASE_URL=postgres://postgres:password@localhost
-HOST=localhost
+DATABASE_URL=postgres://postgres:password@db/postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=postgres
+POSTGRES_HOSTNAME=db
+HOST=0.0.0.0
 PORT=3000
+POSTGRES_PORT=5432
