--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,5 +1,7 @@
+DATABASE_URL=postgres://postgres:password@localhost/postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 POSTGRES_HOSTNAME=localhost
+PORT=3000
 POSTGRES_PORT=5432
