--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ serde_json = "1.0"
 r2d2 = "0.8"
 uuid = { version = "1.7", features = ["serde", "v4"] }
 actix-cors = "0.7.0"
+reqwest = { version = "0.12.5", features = ["json"] }
