--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,5 @@ r2d2 = "0.8"
 uuid = { version = "1.7", features = ["serde", "v4"] }
 actix-cors = "0.7.0"
 reqwest = { version = "0.12.5", features = ["json"] }
+jsonwebtoken = "9.3.0"
+bcrypt = "0.15.1"
