--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ services:
         image: framerate-backend:latest
         container_name: framerate-backend
         depends_on:
-            - db
+            - framerate-database
         build: .
         restart: unless-stopped
         env_file: .env
@@ -12,7 +12,7 @@ services:
         networks:
             - framerate-network
 
-    db:
+    framerate-database:
         image: postgres:14.1
         restart: unless-stopped
         env_file: .env
