Add initial user setup procedure

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,20 @@
-RUST_LOG=rest_api=info,actix=info,diesel_migrations=info
+HOST=0.0.0.0
+PORT=3000
+
 DATABASE_URL=postgres://postgres:password@db/postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=postgres
 POSTGRES_HOSTNAME=db
-HOST=0.0.0.0
-PORT=3000
 POSTGRES_PORT=5432
+
+RUST_LOG=rest_api=info,actix=info,diesel_migrations=info
+
+# TMDB API key can be generated here: https://www.themoviedb.org/settings/api
 TMDB_API_KEY="..."
+
+# Change this to something more secure.
 JWT_SECRET=secret
+
+# This should be removed once initial account is created
+SETUP_SECRET=secret
