--- a/.devcontainer/compose.yml
+++ b/.devcontainer/compose.yml
@@ -16,16 +16,16 @@ services:
         command: sleep infinity
 
         # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-        network_mode: service:db
+        network_mode: service:framerate-database
 
         # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
         # (Adding the "ports" property to this file will not forward from a Codespace.)
 
-    db:
-        image: postgres:14.1
+    framerate-database:
+        image: postgres:16.4
         restart: unless-stopped
         volumes:
-            - postgres-data:/var/lib/postgresql/data
+            - framerate-db-volume:/var/lib/postgresql/data
         env_file:
             # Ensure that the variables in .env match the same variables in devcontainer.json
             - .env
@@ -34,4 +34,4 @@ services:
         # (Adding the "ports" property to this file will not forward from a Codespace.)
 
 volumes:
-    postgres-data:
+    framerate-db-volume:
