--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 HOST=0.0.0.0
 PORT=3000
 
-DATABASE_URL=postgres://postgres:password@db/postgres
+DATABASE_URL=postgres://postgres:password@framerate-database/postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=postgres
-POSTGRES_HOSTNAME=db
+POSTGRES_HOSTNAME=framerate-database
 POSTGRES_PORT=5432
 
 RUST_LOG=rest_api=info,actix=info,diesel_migrations=info
