--- a/compose.yml
+++ b/compose.yml
@@ -17,14 +17,11 @@ services:
         restart: unless-stopped
         env_file: .env
         volumes:
-            - framerate-db-volume:/var/lib/postgresql/data
+            - ./data:/var/lib/postgresql/data
         networks:
             - framerate-network
         ports:
             - "5432:5432"
-
-volumes:
-    framerate-db-volume:
 
 networks:
     framerate-network: {}
