--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,7 +1,7 @@
-DATABASE_URL=postgres://postgres:password@localhost/postgres
+PORT=3000
+
+DB_HOST=localhost
+PGPORT=5432
+POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=postgres
-POSTGRES_HOSTNAME=localhost
-PORT=3000
-POSTGRES_PORT=5432
