Add shows find/popular/details endpoints

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
             "database": "postgres",
             "username": "postgres"
         }
-    ]
+    ],
+    "cSpell.words": ["imdb", "tagline", "tbdb"]
 }
