--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,15 @@ jobs:
               uses: actions/checkout@v4
             # https://github.com/docker/setup-qemu-action
             - name: Set up QEMU
-              uses: docker/setup-qemu-action@v1
+              uses: docker/setup-qemu-action@v3
             # https://github.com/docker/setup-buildx-action
             - name: Set up Docker Buildx
               id: buildx
-              uses: docker/setup-buildx-action@v1
+              uses: docker/setup-buildx-action@v3
+              with:
+                  platforms: linux/arm64 # ,linux/amd64
             - name: Login to GHCR
-              uses: docker/login-action@v1
+              uses: docker/login-action@v3
               with:
                   registry: ghcr.io
                   username: ${{ github.repository_owner }}
@@ -33,7 +35,7 @@ jobs:
               with:
                   images: ghcr.io/${{ github.repository }}
             - name: Build and push
-              uses: docker/build-push-action@v2
+              uses: docker/build-push-action@v6
               with:
                   context: .
                   platforms: linux/arm64 # ,linux/amd64
