--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,7 +1,1 @@
-PORT=3000
-
-DB_HOST=localhost
-PGPORT=5432
-POSTGRES_DB=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+# For development inside a dev container, .devcontainer/.env should be populated with required environment variabes outlined in ../.env.example
