Migrate reviews to media-specific review tables with 1:1 relation to original base review table

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,1 +1,6 @@
 # For development inside a dev container, .devcontainer/.env should be populated with required environment variabes outlined in ../.env.example
+# Additionally, the folowing vairables are recommended for development
+
+# Used to run diesel migrations via disel-cli
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}/${postgres}
+
