--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ diesel = { version = "2.1", features = [
     "uuid",
 ] }
 diesel_migrations = "2.1"
-env_logger = "0.11"
 serde = "1.0"
 serde_json = "1.0"
 r2d2 = "0.8"
@@ -26,3 +25,6 @@ actix-cors = "0.7.0"
 reqwest = { version = "0.12.5", features = ["json"] }
 jsonwebtoken = "9.3.0"
 bcrypt = "0.15.1"
+tracing = "0.1.40"
+tracing-appender = "0.2"
+tracing-subscriber = "0.3"
