Add environment variable for show entry metadata refresh

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ JWT_SECRET=secret
 
 # This should be removed once initial account is created
 SETUP_SECRET=secret
+
+# Time between refreshes of media data in watchlists
+JOB_INTERVAL=3600
