--- a/.devcontainer/compose.yml
+++ b/.devcontainer/compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
     app:
         build:
@@ -16,22 +14,32 @@ services:
         command: sleep infinity
 
         # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-        network_mode: service:framerate-database
 
         # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
         # (Adding the "ports" property to this file will not forward from a Codespace.)
 
-    framerate-database:
+    framerate-dev-database:
         image: postgres:16.4
         restart: unless-stopped
         volumes:
             - framerate-db-volume:/var/lib/postgresql/data
         env_file:
-            # Ensure that the variables in .env match the same variables in devcontainer.json
             - .env
-
-        # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
-        # (Adding the "ports" property to this file will not forward from a Codespace.)
+        environment:
+            - POSTGRES_USER=$POSTGRES_USER
+            - POSTGRES_DB=$POSTGRES_DB
+            - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+            - PGPORT=$PGPORT
+    framerate-test-database:
+        image: postgres:16.4
+        restart: unless-stopped
+        env_file:
+            - .env
+        environment:
+            - POSTGRES_USER=$TEST_POSTGRES_USER
+            - POSTGRES_DB=$TEST_POSTGRES_DB
+            - POSTGRES_PASSWORD=$TEST_POSTGRES_PASSWORD
+            - PGPORT=$PGPORT
 
 volumes:
     framerate-db-volume:
