--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,6 @@ bcrypt = "0.15.1"
 tracing = "0.1.40"
 tracing-appender = "0.2"
 tracing-subscriber = "0.3"
+
+[dev-dependencies]
+actix-http = "3.9.0"
