Add basic tests for all show and movie routes

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -4,3 +4,8 @@
 # Used to run diesel migrations via disel-cli
 DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}/${postgres}
 
+# Used to run tests against test  database set up on ./compose.yml
+TEST_POSTGRES_HOST=framerate-test-database
+TEST_POSTGRES_USER=postgres
+TEST_POSTGRES_DB=postgres
+TEST_POSTGRES_PASSWORD=password
