--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,12 +22,14 @@ serde_json = "1.0"
 r2d2 = "0.8"
 uuid = { version = "1.7", features = ["serde", "v4"] }
 actix-cors = "0.7.0"
-reqwest = { version = "0.12.5", features = ["json"] }
+reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
 jsonwebtoken = "9.3.0"
 bcrypt = "0.15.1"
 tracing = "0.1.40"
 tracing-appender = "0.2"
 tracing-subscriber = "0.3"
+http-cache-reqwest = "0.15.0"
+reqwest-middleware = "0.4.0"
 
 [dev-dependencies]
 actix-http = "3.9.0"
