--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "framerate"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -22,7 +22,12 @@ serde_json = "1.0"
 r2d2 = "0.8"
 uuid = { version = "1.7", features = ["serde", "v4"] }
 actix-cors = "0.7.0"
-reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.5", features = [
+    "json",
+    "rustls-tls",
+    "http2",
+    "charset",
+], default-features = false }
 jsonwebtoken = "9.3.0"
 bcrypt = "0.15.1"
 tracing = "0.1.40"
