Split company functionality from user module and add user tests

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -2,7 +2,7 @@
 # Additionally, the folowing vairables are recommended for development
 
 # Used to run diesel migrations via disel-cli
-DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}/${postgres}
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}/${POSTGRES_DB}
 
 # Used to run tests against test  database set up on ./compose.yml
 TEST_POSTGRES_HOST=framerate-test-database
