--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,12 @@
     "rust-analyzer.linkedProjects": ["./Cargo.toml"],
     "rust-analyzer.showUnlinkedFileNotification": false,
     "rust-analyzer.testExplorer": true,
+    "rust-analyzer.cargo.extraEnv": {
+        "RUSTC_BOOTSTRAP": "1"
+    },
+    "rust-analyzer.runnables.extraEnv": {
+        "RUSTC_BOOTSTRAP": "1"
+    },
     "debug.allowBreakpointsEverywhere": true,
     "sqltools.connections": [
         {
