--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ tracing-appender = "0.2"
 tracing-subscriber = "0.3"
 http-cache-reqwest = "0.15.0"
 reqwest-middleware = "0.4.0"
+futures-util = "0.3.31"
+tracing-log = "0.2.0"
 
 [dev-dependencies]
 actix-http = "3.9.0"
