Update readme and env examples

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,10 +1,35 @@
-# For development inside a dev container, .devcontainer/.env should be populated with required environment variabes outlined in ../.env.example
-# Additionally, the folowing vairables are recommended for development
+# Server
+HOST=localhost
+PORT=3000
 
-# Used to run diesel migrations via disel-cli
+# Database
+DB_HOST=framerate-dev-database
+PGPORT=5432
+POSTGRES_USER=postgres
+POSTGRES_DB=postgres
+POSTGRES_PASSWORD=password
+
+# TMDB API key can be generated here: https://www.themoviedb.org/settings/api
+TMDB_API_KEY="..."
+
+# Change this to something more secure.
+JWT_SECRET=secretjwt
+
+# This should be removed once initial account is created
+SETUP_SECRET=secretsetup
+
+# Time between refreshes of media data in watchlists
+JOB_INTERVAL=3600
+
+
+# Additional development environment variables
+
+RUST_LOG=rest_api=info,actix=info,diesel_migrations=info
+
+# Provide full database url for Diesel CLI
 DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}/${POSTGRES_DB}
 
-# Used to run tests against test  database set up on ./compose.yml
+# Testing Database
 TEST_POSTGRES_HOST=framerate-test-database
 TEST_POSTGRES_USER=postgres
 TEST_POSTGRES_DB=postgres
