--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,22 @@
+# Server
 HOST=localhost
 PORT=3000
 
+# Database
 DB_HOST=framerate-database
 PGPORT=5432
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 
-RUST_LOG=rest_api=info,actix=info,diesel_migrations=info
-
 # TMDB API key can be generated here: https://www.themoviedb.org/settings/api
 TMDB_API_KEY="..."
 
 # Change this to something more secure.
-JWT_SECRET=secret
+JWT_SECRET=secretjwt
 
 # This should be removed once initial account is created
-SETUP_SECRET=secret
+SETUP_SECRET=secretsetup
 
 # Time between refreshes of media data in watchlists
 JOB_INTERVAL=3600
