Add movie entry updater job

--- a/.env.example
+++ b/.env.example
@@ -18,5 +18,5 @@ JWT_SECRET=secretjwt
 # This should be removed once initial account is created
 SETUP_SECRET=secretsetup
 
-# Time between refreshes of media data in watchlists
-JOB_INTERVAL=3600
+# Time between refreshes of media data in watchlists - should not be set too low or TMDB rate limits will be hit
+ENTRY_METADATA_JOB_INTERVAL=3600
