--- a/framerate_backend/Cargo.toml
+++ b/framerate_backend/Cargo.toml
@@ -37,6 +37,7 @@ http-cache-reqwest = "0.15.0"
 reqwest-middleware = "0.4.0"
 futures-util = "0.3.31"
 tracing-log = "0.2.0"
+tmdb_api = { path = "../tmdb_api" }
 
 [dev-dependencies]
 actix-http = "3.9.0"
