Support configurable entry outdated time delta

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ SETUP_SECRET=secretsetup
 
 # Time between refreshes of media data in watchlists - should not be set too low or TMDB rate limits will be hit
 ENTRY_METADATA_JOB_INTERVAL=3600
+
+# Update interval for each show / movie in watchlist. Supports hours (h), days (d), weeks (w).
+SHOW_ENTRY_OUTDATED_DURATION=6w
+MOVIE_ENTRY_OUTDATED_DURATION=8w
