Add invite and registration system, create admin routes

--- a/.env.example
+++ b/.env.example
@@ -18,9 +18,15 @@ JWT_SECRET=secretjwt
 # This should be removed once initial account is created
 SETUP_SECRET=secretsetup
 
+# Enable new user registrations. Disabled when variable not set. Supports 'open', 'invite' (user must submit invite code tied to email to register)
+REGISTRATION_MODE=invite
+
+# Must be unique from JWT secret
+INVITE_SECRET=secretinvite
+
 # Time between refreshes of media data in watchlists - should not be set too low or TMDB rate limits will be hit
 ENTRY_METADATA_JOB_INTERVAL=3600
 
-# Update interval for each show / movie in watchlist. Supports hours (h), days (d), weeks (w).
+# Update interval for each show / movie in watchlist. Supports number followed by unit: 'h' (hours), 'd' (days), 'w' (weeks)
 SHOW_ENTRY_OUTDATED_DURATION=6w
 MOVIE_ENTRY_OUTDATED_DURATION=8w
